package entity.animal;

public interface FoodChainMember {
	
}
