package entity.animal;

public interface Prey extends FoodChainMember {
	void function_test_prey();
}
